<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Final Project</string>
    <string name="category">Movie</string>
    <string name="addMovie">Add movie</string>
    <string name="movieXML">XML</string>
    <string name="about">About</string>
    <string name="movieImport">Movies were imported</string>
    <string name="movieSummary">Summary:</string>
    <string name="movieStatistics">Statistics on the movie rating: Highest</string>
    <string name="movieSummary2">Summary</string>
    <string name="movieAuthor">"Activity version number, author's name, and Instructions: "</string>
    <string name="movieInstructions">"Version 1.0 by Svetlana Netchaeva.
        This application lets users add, delete, and update movies, or import movies from XML</string>

    <string name="title">Title</string>
    <string name="actors">Actors</string>
    <string name="url">URL</string>
    <string name="genre">Genre</string>
    <string name="rating">Rating</string>
    <string name="description">Description</string>
    <string name="length">Length</string>

    <string name="movieAdded">Movie added</string>
    <string name="movieDelete">Delete</string>
    <string name="movieUpdate">Update</string>
    <string name="movieDeleted">Movie deleted</string>
    <string name="movieUpdated">Movie is updated</string>

    <string name="movieLowRating">, Lowest</string>
    <string name="movieAverage">, Average</string>

    <string name="statisticsButton">Summary</string>
    <string name="deleteButton">Delete</string>
    <string name="updateButton">Update</string>

    <string name="dialog_button_label">OK</string>
    <string name="button_label">Show Dialog Box</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="station_number">Enter stop number</string>
    <string name="button_search">Go</string>


    <string name="addPatient">Add Patient</string>
    <string name="saveChanges">Save Changes</string>
    <string name="deletePatient">Delete</string>
    <string name="updatePatient">Edit</string>

    <string name="hintYourName">Your Name</string>
    <string name="hintYourBirthday">Your Birthday</string>
    <string name="YourAddress">Your Address</string>
    <string name="hintPhoneNumber">Phone Number</string>
    <string name="HealthCardNumber">Health Card Number</string>
    <string name="reasonForVisti">Enter Reason For Your Visit</string>
    <string name="doctorChoice">Doctor\'s Office</string>
    <string name="optometrist">Optometrist</string>
    <string name="dentist">Dentist</string>
    <string name="braces">Have you ever had braces?</string>
    <string name="benefits">Do you have medical benefits?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="glasses">What date did you buy your glasses?</string>
    <string name="store">Which store did you buy your glasses from?</string>
    <string name="continueForm">Please, finish the form and press "Submit button":</string>
    <string name="surgeries">Specify any previous surgeries:</string>
    <string name="allergies">Specify any previous allergies:</string>
    <string name="hint">You can type here...</string>
    <string name="title_activity_test_toolbar">TestToolbar</string>

    <string name="btnAnswerMCAnna"> ANSWER </string>
    <string name="questionTextAnna"> Here will be the text of the question </string>
    <string name="title_activity_anna_true_false">AnnaTrueFalse</string>
    <string name="action_settings">Settings</string>


    <string name="pj_help">About</string>
    <string name="pj_dialog">About</string>
    <string name="pj_ok">OK</string>
    <string name="pj_name">Pavel Jilinski</string>
    <string name="pj_version">V2.0</string>
    <string name="pj_instructions">Enter bus stop number to search for upcoming trips. The stop number can be found at the
    bus stop sign. It is a 4 digit number. Enter this numer in the text field and press Enter or Go. The bus stop if found
        is added to the screen at the top (if number is invalid an error message is displayed. Click on the station found to see
    routes that service this stop.</string>
    <string name="pj_delete_stop">Delete Stop</string>


    <string name="import_xml">Import XML</string>
    <string name="addQuestionText">Question</string>
    <string name="addAnswer1"> Answer Option #1 </string>
    <string name="addAnswer2"> Answer Option #2 </string>
    <string name="addAnswer3"> Answer Option #3 </string>
    <string name="addAnswer4"> Answer Option #4 </string>
    <string name="Add">Add</string>
    <string name="putYourQuestion">Type your question here</string>
    <string name="Option1Answer"> Type your answer here</string>
    <string name="Option2Answer">Type your answer here</string>
    <string name="Option3Answer">Type your answer here</string>
    <string name="Option4Answer">Type your answer here</string>
    <string name="rightAnswer">Type 1, 2, 3 or 4 as correct answer </string>
    <string name="correctAnswer">what is correct answer number?</string>
    <string name="rightTFAnswer">Put 1 for True or 2 for False </string>
    <string name="correctTFAnswer">Type code for correct answer</string>
    <string name="rightNumericAnswer">Type correct answer</string>
    <string name="correctNumericAnswer">Correct answer is... </string>
    <string name="lambdaAnswer">Up to what decimal check goes?</string>
    <string name="lambdaToCheck">Number of digits after decimal</string>
    <string name="multiple_dialog"> Would you like to add more questions? </string>
    <string name="ok"> </string>
    <string name="cancel"> </string>
    <string name="exit"> Finish </string>
    <string name="addMore"> Add One More </string>

</resources>

