<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.delle6330.assignment1.AddMovie"
    android:orientation="vertical"
    android:background="#D8CEF6">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"/>

        <EditText
            android:id="@+id/editTitle"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:inputType="text"
            android:layout_below="@+id/title"/>

        <TextView
            android:id="@+id/actors"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/actors"
            android:layout_below="@+id/editTitle"/>

        <EditText
            android:id="@+id/editActors"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:inputType="text"
            android:layout_below="@+id/actors"/>

        <TextView
            android:id="@+id/length"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/length"
            android:layout_below="@+id/editActors"/>

        <EditText
            android:id="@+id/editLength"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:inputType="text"
            android:layout_below="@+id/length"/>

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:layout_below="@+id/editLength"/>

        <EditText
            android:id="@+id/editDescription"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:inputType="text"
            android:layout_below="@+id/description"/>

        <TextView
            android:id="@+id/rating"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rating"
            android:layout_below="@+id/editDescription"/>

        <EditText
            android:id="@+id/editRating"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:inputType="number"
            android:layout_below="@+id/rating"/>

        <TextView
            android:id="@+id/genre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/genre"
            android:layout_below="@+id/editRating"/>

        <EditText
            android:id="@+id/editGenre"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:inputType="text"
            android:layout_below="@+id/genre"/>

        <TextView
            android:id="@+id/url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/url"
            android:layout_below="@+id/editGenre"/>

        <EditText
            android:id="@+id/editUrl"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:inputType="text"
            android:layout_below="@+id/url"/>

        <Button
            android:id="@+id/button_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:text= "@string/addMovie" />

</RelativeLayout>
